# repo-onboarding-agent

./: .gitignore  AGENTS.md  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: onboarding-reports.mdc
examples/: run_onboarding.py
reports/examples/: example-report.md
src/: __init__.py  agent.py
src/analyzers/: __init__.py  commands.py  risks.py  structure.py
templates/: onboarding-report.md
tests/: test_agent.py
